<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <Button
        android:id="@+id/button2"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:background="@drawable/images"
        android:text="@string/arroz"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="5dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:background="@drawable/mantequilla"
        android:layout_below="@+id/button2"
        android:text="@string/mantequilla" />

    <Button
        android:id="@+id/button4"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_below="@+id/button2"
        android:layout_toEndOf="@+id/button3"
        android:background="@drawable/pan"
        android:text="@string/pan"
        android:layout_toRightOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_below="@+id/button2"
        android:layout_toEndOf="@+id/button4"
        android:background="@drawable/papas"
        android:text="@string/papas"
        android:layout_toRightOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_below="@+id/button2"
        android:layout_toEndOf="@+id/button5"
        android:background="@drawable/queso"
        android:text="@string/queso"
        android:layout_toRightOf="@+id/button5" />

    <Button
        android:id="@+id/button9"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_below="@+id/button10"
        android:layout_toEndOf="@+id/button5"
        android:background="@drawable/harinapan"
        android:text="@string/harina_maiz"
        android:layout_toRightOf="@+id/button5" />

    <Button
        android:id="@+id/button10"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_below="@+id/button3"
        android:layout_toEndOf="@+id/button5"
        android:background="@drawable/huevos"
        android:text="@string/huevos"
        android:layout_toRightOf="@+id/button5" />

    <Button
        android:id="@+id/button12"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button3"
        android:background="@drawable/leche"
        android:text="@string/leche"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/button13"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_below="@+id/button3"
        android:layout_toEndOf="@+id/button3"
        android:background="@drawable/salsa"
        android:text="@string/salsa"
        android:layout_toRightOf="@+id/button3" />

    <Button
        android:id="@+id/button15"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_toEndOf="@+id/button14"
        android:text="@string/harina_trigo"
        android:background="@drawable/harinatrigo"
        android:layout_toRightOf="@+id/button14" />

    <Button
        android:id="@+id/button14"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_toEndOf="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:background="@drawable/mayonesa"
        android:text="@string/mayonesa" />

    <Button
        android:id="@+id/button16"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/button15"
        android:text="@string/coca_cola"
        android:background="@drawable/cocacola"
        android:layout_toRightOf="@+id/button15" />

    <Button
        android:id="@+id/button17"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_below="@+id/button9"
        android:layout_toEndOf="@+id/button5"
        android:background="@drawable/cebolla"
        android:text="@string/cebolla"
        android:layout_toRightOf="@+id/button5" />

    <Button
        android:id="@+id/button18"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_below="@+id/button19"
        android:layout_toEndOf="@+id/button4"
        android:background="@drawable/pimenton"
        android:text="@string/pimenton"
        android:layout_toRightOf="@+id/button4" />

    <Button
        android:id="@+id/button19"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button10"
        android:text="@string/salchichas"
        android:background="@drawable/salchicha"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/button20"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_below="@+id/button10"
        android:layout_toEndOf="@+id/button2"
        android:text="@string/tocineta"
        android:background="@drawable/tocineta"
        android:layout_toRightOf="@+id/button2" />

    <Button
        android:id="@+id/button21"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_below="@+id/button10"
        android:layout_toEndOf="@+id/button4"
        android:text="@string/flips"
        android:background="@drawable/flips"
        android:layout_toRightOf="@+id/button4" />

    <Button
        android:id="@+id/button22"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_below="@+id/button19"
        android:layout_toEndOf="@+id/button2"
        android:background="@drawable/jamon"
        android:text="@string/jamon"
        android:layout_toRightOf="@+id/button2" />

    <Button
        android:id="@+id/button23"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_below="@+id/button19"
        android:background="@drawable/tequenos"
        android:text="@string/teque_os" />

    <Button
        android:id="@+id/button24"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_below="@+id/button3"
        android:layout_toEndOf="@+id/button4"
        android:text="@string/cambur"
        android:background="@drawable/cambur"
        android:layout_toRightOf="@+id/button4" />
</RelativeLayout>